--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,6 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+First you need to login as member of the webapp so, you can use god like features of our webapp i.e,
+you can upload the anime then you can modify, delete as well. 
+
+Requirements;
+Need to create member account to upload animes, normal users can access the page directly and watch anime.
+
